code block alignment fix with p tag

--- a/static/assets/css/style.scss
+++ b/static/assets/css/style.scss
@@ -3338,6 +3338,7 @@ section {
 
 .highlight {
   width: 100%;
+  margin: 2%;
 
   pre {
     font-size: 14px;
